# birchflow

./: .gitignore  404.html  README.md  com.github.toCase.Birchflow.yml  index.html  io.github.toCase.Birchflow.yml  mkdocs.yml  sitemap.xml
.github/workflows/: gh-pages.yml
contracts/: index.html
docs/: contracts.md  h_lifecircle.md  index.md  partners.md  settings.md
flatpak/: com.github.toCase.Birchflow.desktop  com.github.toCase.Birchflow.metainfo.xml  io.github.toCase.Birchflow.desktop  io.github.toCase.Birchflow.metainfo.xml
h_lifecircle/: index.html
partners/: index.html
repo/: summary  summary.idx
repo/refs/heads/app/com.github.toCase.Birchflow/x86_64/: master
repo/refs/heads/runtime/com.github.toCase.Birchflow.Debug/x86_64/: master
repo/summaries/: a09d96498cfdebf2cff1c08743d292d9895185ad3e73ff737500ac6af7876044-dfe352d05ecd730e85f8a9f078e7f7aecce0750fbe8e564b221bf31bb8523e6d.delta
search/: search_index.json
settings/: index.html
site/: 404.html  sitemap.xml
site/search/: search_index.json
src/: CMakeLists.txt  app_namespaces.h  appmodel.qmodel  dashmanager.cpp  dashmanager.h  database.cpp  database.h  filemanager.cpp  filemanager.h  m_contractdocs.cpp  m_contractdocs.h  m_contracts.cpp  m_contracts.h  m_contractstatus.h  m_currency.cpp  m_currency.h  m_partner.cpp  m_partner.h  m_partnerbank.cpp  m_partnerbank.h  m_partnerdocs.cpp  m_partnerdocs.h  m_partnerperson.cpp  m_partnerperson.h  m_payseries.cpp  m_payseries.h  main.cpp  notificationmanager.cpp  notificationmanager.h  pm_contracts.cpp  pm_contracts.h  pm_dashcontracts.cpp  pm_dashcontracts.h  pm_partner.cpp  pm_partner.h  pm_partnerbank.cpp  pm_partnerbank.h  pm_partnercombo.cpp  pm_partnercombo.h  pm_partnerdoc.cpp  (+10 more)
src/qml/: About.qml  App.qml  AppNote.qml  Contracts.qml  Dash.qml  Main.qml  Notification.qml  Partners.qml  Setting.qml  const.js
src/qml/contracts/: AmendmentForm.qml  ContractsArchive.qml  ContractsDetail.qml  ContractsForm.qml  ContractsList.qml  ContractsListFilter.qml  DocumentForm.qml  PaymentForm.qml
src/qml/controls/: AcceptDeleteDialog.qml  Button_DF.qml  DateEdit_DF.qml  DateProgress_DF.qml  FileDialog_DF.qml  FloatInput_DF.qml  HiddenMenu_DF.qml  Notify_DF.qml  PaidProgress_DF.qml
src/qml/dash/: DashContracts.qml  DashNumberValue.qml  DashPaymentChart.qml  DashTroubleContracts.qml
src/qml/partners/: PartnersBanks.qml  PartnersDocDialog.qml  PartnersDocs.qml  PartnersEdit.qml  PartnersForm.qml  PartnersInfo.qml  PartnersMain.qml  PartnersPersons.qml
src/tr/: app_ua.qm  app_ua.ts
